force-app/main/default/objects/NewDashboardVideoLink__c/NewDashboardVideoLink__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is used on new account and new driver dashboard intake pages video link</description>
    <label>NewDashboardVideoLink</label>
</CustomObject>