force-app/main/default/objects/NewDashboardVideoLink__c/fields/Add_User__c.field-meta.xml
<CustomField>
    <fullName>Add_User__c</fullName>
    <label>Add User</label>
    <type>Url</type>
</CustomField>