force-app/main/default/objects/NewDashboardVideoLink__c/fields/Android_Commuter_Rule__c.field-meta.xml
<CustomField>
    <fullName>Android_Commuter_Rule__c</fullName>
    <label>Android Commuter Rule</label>
    <type>Url</type>
</CustomField>