force-app/main/default/objects/NewDashboardVideoLink__c/fields/Android_Confirming_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Android_Confirming_Mileage__c</fullName>
    <label>Android Confirming Mileage</label>
    <type>Url</type>
</CustomField>