force-app/main/default/objects/NewDashboardVideoLink__c/fields/Android_Debug_Logs__c.field-meta.xml
<CustomField>
    <fullName>Android_Debug_Logs__c</fullName>
    <label>Android Debug Logs</label>
    <type>Url</type>
</CustomField>