force-app/main/default/objects/NewDashboardVideoLink__c/fields/Android_Edit_Trip__c.field-meta.xml
<CustomField>
    <fullName>Android_Edit_Trip__c</fullName>
    <label>Android Edit Trip</label>
    <type>Url</type>
</CustomField>