force-app/main/default/objects/NewDashboardVideoLink__c/fields/Android_Entry__c.field-meta.xml
<CustomField>
    <fullName>Android_Entry__c</fullName>
    <label>Android Entry</label>
    <type>Url</type>
</CustomField>