force-app/main/default/objects/NewDashboardVideoLink__c/fields/Android_Location_Service__c.field-meta.xml
<CustomField>
    <fullName>Android_Location_Service__c</fullName>
    <label>Android Location Service</label>
    <type>Url</type>
</CustomField>