force-app/main/default/objects/NewDashboardVideoLink__c/fields/Android_Merging_Trip__c.field-meta.xml
<CustomField>
    <fullName>Android_Merging_Trip__c</fullName>
    <label>Android Merging Trip</label>
    <type>Url</type>
</CustomField>