force-app/main/default/objects/NewDashboardVideoLink__c/fields/Android_Naming_Location__c.field-meta.xml
<CustomField>
    <fullName>Android_Naming_Location__c</fullName>
    <label>Android Naming Location</label>
    <type>Url</type>
</CustomField>