force-app/main/default/objects/NewDashboardVideoLink__c/fields/Android_Notes__c.field-meta.xml
<CustomField>
    <fullName>Android_Notes__c</fullName>
    <label>Android Notes</label>
    <type>Url</type>
</CustomField>