force-app/main/default/objects/NewDashboardVideoLink__c/fields/Android_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Android_Reporting__c</fullName>
    <label>Android Reporting</label>
    <type>Url</type>
</CustomField>