force-app/main/default/objects/NewDashboardVideoLink__c/fields/Android_Route_Planing__c.field-meta.xml
<CustomField>
    <fullName>Android_Route_Planing__c</fullName>
    <label>Android Route Planing</label>
    <type>Url</type>
</CustomField>