force-app/main/default/objects/NewDashboardVideoLink__c/fields/Android_Silencing_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Android_Silencing_Notifications__c</fullName>
    <label>Android Silencing Notifications</label>
    <type>Url</type>
</CustomField>