force-app/main/default/objects/NewDashboardVideoLink__c/fields/Android_Trip_Type__c.field-meta.xml
<CustomField>
    <fullName>Android_Trip_Type__c</fullName>
    <label>Android Trip Type</label>
    <type>Url</type>
</CustomField>