force-app/main/default/objects/NewDashboardVideoLink__c/fields/Android_Turning_Off__c.field-meta.xml
<CustomField>
    <fullName>Android_Turning_Off__c</fullName>
    <label>Android Turning Off</label>
    <type>Url</type>
</CustomField>