force-app/main/default/objects/NewDashboardVideoLink__c/fields/Android_Work_Hours__c.field-meta.xml
<CustomField>
    <fullName>Android_Work_Hours__c</fullName>
    <label>Android Work Hours</label>
    <type>Url</type>
</CustomField>