force-app/main/default/objects/NewDashboardVideoLink__c/fields/Approving_Mileage_Admin__c.field-meta.xml
<CustomField>
    <fullName>Approving_Mileage_Admin__c</fullName>
    <label>Approving Mileage Admin</label>
    <type>Url</type>
</CustomField>