force-app/main/default/objects/NewDashboardVideoLink__c/fields/Approving_Mileage_Manager__c.field-meta.xml
<CustomField>
    <fullName>Approving_Mileage_Manager__c</fullName>
    <label>Approving Mileage Manager</label>
    <type>Url</type>
</CustomField>