force-app/main/default/objects/NewDashboardVideoLink__c/fields/Auto_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Auto_Insurance__c</fullName>
    <label>Auto Insurance</label>
    <type>Url</type>
</CustomField>