force-app/main/default/objects/NewDashboardVideoLink__c/fields/Bluetooth_android__c.field-meta.xml
<CustomField>
    <fullName>Bluetooth_android__c</fullName>
    <label>Bluetooth android</label>
    <type>Url</type>
</CustomField>