force-app/main/default/objects/NewDashboardVideoLink__c/fields/Bluetooth_iOS__c.field-meta.xml
<CustomField>
    <fullName>Bluetooth_iOS__c</fullName>
    <label>Bluetooth iOS</label>
    <type>Url</type>
</CustomField>