force-app/main/default/objects/NewDashboardVideoLink__c/fields/Compliance__c.field-meta.xml
<CustomField>
    <fullName>Compliance__c</fullName>
    <description>Compliance video link</description>
    <label>Compliance</label>
    <type>Url</type>
</CustomField>