force-app/main/default/objects/NewDashboardVideoLink__c/fields/Data_Sync_Admin__c.field-meta.xml
<CustomField>
    <fullName>Data_Sync_Admin__c</fullName>
    <description>Getting Mileage From the Cloud</description>
    <label>Data Sync Admin</label>
    <type>Url</type>
</CustomField>