force-app/main/default/objects/NewDashboardVideoLink__c/fields/Data_Sync_Driver__c.field-meta.xml
<CustomField>
    <fullName>Data_Sync_Driver__c</fullName>
    <label>Data Sync Driver</label>
    <type>Url</type>
</CustomField>