force-app/main/default/objects/NewDashboardVideoLink__c/fields/Donwload_instruction_for_Android__c.field-meta.xml
<CustomField>
    <fullName>Donwload_instruction_for_Android__c</fullName>
    <label>Donwload instruction for Android</label>
    <type>Url</type>
</CustomField>