force-app/main/default/objects/NewDashboardVideoLink__c/fields/Donwload_instruction_for_IOS__c.field-meta.xml
<CustomField>
    <fullName>Donwload_instruction_for_IOS__c</fullName>
    <label>Donwload instruction for IOS</label>
    <type>Url</type>
</CustomField>