force-app/main/default/objects/NewDashboardVideoLink__c/fields/Download_mLog_Link_For_IOS__c.field-meta.xml
<CustomField>
    <fullName>Download_mLog_Link_For_IOS__c</fullName>
    <label>Download mLog Link For IOS</label>
    <type>Url</type>
</CustomField>