force-app/main/default/objects/NewDashboardVideoLink__c/fields/FAQs_Link__c.field-meta.xml
<CustomField>
    <fullName>FAQs_Link__c</fullName>
    <label>FAQs Link</label>
    <type>Url</type>
</CustomField>