force-app/main/default/objects/NewDashboardVideoLink__c/fields/iBeacon_android__c.field-meta.xml
<CustomField>
    <fullName>iBeacon_android__c</fullName>
    <label>iBeacon android</label>
    <type>Url</type>
</CustomField>