force-app/main/default/objects/NewDashboardVideoLink__c/fields/iBeacon_iOS__c.field-meta.xml
<CustomField>
    <fullName>iBeacon_iOS__c</fullName>
    <label>iBeacon iOS</label>
    <type>Url</type>
</CustomField>