force-app/main/default/objects/NewDashboardVideoLink__c/fields/Insurance_Link__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Link__c</fullName>
    <label>Insurance Link</label>
    <type>Url</type>
</CustomField>