force-app/main/default/objects/NewDashboardVideoLink__c/fields/IOS_Commuter_Rule__c.field-meta.xml
<CustomField>
    <fullName>IOS_Commuter_Rule__c</fullName>
    <label>IOS Commuter Rule</label>
    <type>Url</type>
</CustomField>