force-app/main/default/objects/NewDashboardVideoLink__c/fields/IOS_Confirming_Mileage__c.field-meta.xml
<CustomField>
    <fullName>IOS_Confirming_Mileage__c</fullName>
    <label>IOS Confirming Mileage</label>
    <type>Url</type>
</CustomField>