force-app/main/default/objects/NewDashboardVideoLink__c/fields/IOS_Debug_Logs__c.field-meta.xml
<CustomField>
    <fullName>IOS_Debug_Logs__c</fullName>
    <label>IOS Debug Logs</label>
    <type>Url</type>
</CustomField>