force-app/main/default/objects/NewDashboardVideoLink__c/fields/IOS_Edit_Trip__c.field-meta.xml
<CustomField>
    <fullName>IOS_Edit_Trip__c</fullName>
    <label>IOS Edit Trip</label>
    <type>Url</type>
</CustomField>