force-app/main/default/objects/NewDashboardVideoLink__c/fields/IOS_Entry__c.field-meta.xml
<CustomField>
    <fullName>IOS_Entry__c</fullName>
    <label>IOS Entry</label>
    <type>Url</type>
</CustomField>