force-app/main/default/objects/NewDashboardVideoLink__c/fields/IOS_Location_Service__c.field-meta.xml
<CustomField>
    <fullName>IOS_Location_Service__c</fullName>
    <label>IOS Location Service</label>
    <type>Url</type>
</CustomField>