force-app/main/default/objects/NewDashboardVideoLink__c/fields/IOS_Merging_Trip__c.field-meta.xml
<CustomField>
    <fullName>IOS_Merging_Trip__c</fullName>
    <label>IOS Merging Trip</label>
    <type>Url</type>
</CustomField>