force-app/main/default/objects/NewDashboardVideoLink__c/fields/IOS_Naming_Location__c.field-meta.xml
<CustomField>
    <fullName>IOS_Naming_Location__c</fullName>
    <label>IOS Naming Location</label>
    <type>Url</type>
</CustomField>