force-app/main/default/objects/NewDashboardVideoLink__c/fields/IOS_Notes__c.field-meta.xml
<CustomField>
    <fullName>IOS_Notes__c</fullName>
    <label>IOS Notes</label>
    <type>Url</type>
</CustomField>