force-app/main/default/objects/NewDashboardVideoLink__c/fields/IOS_Reporting__c.field-meta.xml
<CustomField>
    <fullName>IOS_Reporting__c</fullName>
    <label>IOS Reporting</label>
    <type>Url</type>
</CustomField>