force-app/main/default/objects/NewDashboardVideoLink__c/fields/IOS_Route_Planing__c.field-meta.xml
<CustomField>
    <fullName>IOS_Route_Planing__c</fullName>
    <label>IOS Route Planing</label>
    <type>Url</type>
</CustomField>