force-app/main/default/objects/NewDashboardVideoLink__c/fields/IOS_Silencing_Notifications__c.field-meta.xml
<CustomField>
    <fullName>IOS_Silencing_Notifications__c</fullName>
    <label>IOS Silencing Notifications</label>
    <type>Url</type>
</CustomField>