force-app/main/default/objects/NewDashboardVideoLink__c/fields/IOS_Trip_Type__c.field-meta.xml
<CustomField>
    <fullName>IOS_Trip_Type__c</fullName>
    <label>IOS Trip Type</label>
    <type>Url</type>
</CustomField>