force-app/main/default/objects/NewDashboardVideoLink__c/fields/IOS_Turning_Off__c.field-meta.xml
<CustomField>
    <fullName>IOS_Turning_Off__c</fullName>
    <label>IOS Turning Off</label>
    <type>Url</type>
</CustomField>