force-app/main/default/objects/NewDashboardVideoLink__c/fields/IOS_Work_Hours__c.field-meta.xml
<CustomField>
    <fullName>IOS_Work_Hours__c</fullName>
    <label>IOS Work Hours</label>
    <type>Url</type>
</CustomField>