force-app/main/default/objects/NewDashboardVideoLink__c/fields/Manual_GPS_Android__c.field-meta.xml
<CustomField>
    <fullName>Manual_GPS_Android__c</fullName>
    <label>Manual GPS Android</label>
    <type>Url</type>
</CustomField>