force-app/main/default/objects/NewDashboardVideoLink__c/fields/Manual_GPS_IOS__c.field-meta.xml
<CustomField>
    <fullName>Manual_GPS_IOS__c</fullName>
    <label>Manual GPS IOS</label>
    <type>Url</type>
</CustomField>