force-app/main/default/objects/NewDashboardVideoLink__c/fields/mBurse_FAQ_s__c.field-meta.xml
<CustomField>
    <fullName>mBurse_FAQ_s__c</fullName>
    <description>mBurse FAQ Document</description>
    <label>mBurse FAQ&apos;s</label>
    <type>Url</type>
</CustomField>