force-app/main/default/objects/NewDashboardVideoLink__c/fields/mDash_Tour_Admin__c.field-meta.xml
<CustomField>
    <fullName>mDash_Tour_Admin__c</fullName>
    <label>mDash Tour Admin</label>
    <type>Url</type>
</CustomField>