force-app/main/default/objects/NewDashboardVideoLink__c/fields/mDash_Tour_Driver__c.field-meta.xml
<CustomField>
    <fullName>mDash_Tour_Driver__c</fullName>
    <label>mDash Tour Driver</label>
    <type>Url</type>
</CustomField>