force-app/main/default/objects/NewDashboardVideoLink__c/fields/mDash_Tour_Manager__c.field-meta.xml
<CustomField>
    <fullName>mDash_Tour_Manager__c</fullName>
    <label>mDash Tour Manager</label>
    <type>Url</type>
</CustomField>