force-app/main/default/objects/NewDashboardVideoLink__c/fields/Methodology__c.field-meta.xml
<CustomField>
    <fullName>Methodology__c</fullName>
    <description>Methodology for driver</description>
    <label>Methodology</label>
    <type>Url</type>
</CustomField>