force-app/main/default/objects/NewDashboardVideoLink__c/fields/mLog_FAQ_s__c.field-meta.xml
<CustomField>
    <fullName>mLog_FAQ_s__c</fullName>
    <description>mLog FAQ Document for Driver</description>
    <label>mLog FAQ&apos;s</label>
    <type>Url</type>
</CustomField>