force-app/main/default/objects/NewDashboardVideoLink__c/fields/mLog_Instruction__c.field-meta.xml
<CustomField>
    <fullName>mLog_Instruction__c</fullName>
    <description>mLog Instruction Document For Driver</description>
    <label>mLog Instruction</label>
    <type>Url</type>
</CustomField>