force-app/main/default/objects/NewDashboardVideoLink__c/fields/mLog_Instruction_Android_Video__c.field-meta.xml
<CustomField>
    <fullName>mLog_Instruction_Android_Video__c</fullName>
    <description>mLog Instruction Document For Driver</description>
    <label>mLog Instruction Android Video</label>
    <type>Url</type>
</CustomField>