force-app/main/default/objects/NewDashboardVideoLink__c/fields/mLog_Instruction_IOS_Video__c.field-meta.xml
<CustomField>
    <fullName>mLog_Instruction_IOS_Video__c</fullName>
    <label>mLog Instruction IOS Video</label>
    <type>Url</type>
</CustomField>