force-app/main/default/objects/NewDashboardVideoLink__c/fields/mLog_Mileage_Tracking__c.field-meta.xml
<CustomField>
    <fullName>mLog_Mileage_Tracking__c</fullName>
    <label>mLog Mileage Tracking</label>
    <type>Url</type>
</CustomField>