force-app/main/default/objects/NewDashboardVideoLink__c/fields/mLog_Preview_Android_Video__c.field-meta.xml
<CustomField>
    <fullName>mLog_Preview_Android_Video__c</fullName>
    <description>mLog App Overview</description>
    <label>mLog Preview Android Video</label>
    <type>Url</type>
</CustomField>