force-app/main/default/objects/NewDashboardVideoLink__c/fields/mLog_Preview_Company_Provided_Link__c.field-meta.xml
<CustomField>
    <fullName>mLog_Preview_Company_Provided_Link__c</fullName>
    <label>mLog Preview Company Provided Link</label>
    <type>Url</type>
</CustomField>