force-app/main/default/objects/NewDashboardVideoLink__c/fields/mLog_Preview_IOS_Video__c.field-meta.xml
<CustomField>
    <fullName>mLog_Preview_IOS_Video__c</fullName>
    <label>mLog Preview IOS Video</label>
    <type>Url</type>
</CustomField>