force-app/main/default/objects/NewDashboardVideoLink__c/fields/mLog_Support_Link__c.field-meta.xml
<CustomField>
    <fullName>mLog_Support_Link__c</fullName>
    <label>mLog Support Link</label>
    <type>Url</type>
</CustomField>