force-app/main/default/objects/NewDashboardVideoLink__c/fields/Nav_Feature_For_Admin__c.field-meta.xml
<CustomField>
    <fullName>Nav_Feature_For_Admin__c</fullName>
    <label>Nav Feature For Admin</label>
    <type>Url</type>
</CustomField>