force-app/main/default/objects/NewDashboardVideoLink__c/fields/Nav_Feature_For_Driver__c.field-meta.xml
<CustomField>
    <fullName>Nav_Feature_For_Driver__c</fullName>
    <label>Nav Feature For Driver</label>
    <type>Url</type>
</CustomField>