force-app/main/default/objects/NewDashboardVideoLink__c/fields/Nav_Feature_For_Manager__c.field-meta.xml
<CustomField>
    <fullName>Nav_Feature_For_Manager__c</fullName>
    <label>Nav Feature For Manager</label>
    <type>Url</type>
</CustomField>