force-app/main/default/objects/NewDashboardVideoLink__c/fields/Optimize_Android__c.field-meta.xml
<CustomField>
    <fullName>Optimize_Android__c</fullName>
    <description>mLog Settings Driver</description>
    <label>Optimize_Android</label>
    <type>Url</type>
</CustomField>