force-app/main/default/objects/NewDashboardVideoLink__c/fields/Optimize_IOS__c.field-meta.xml
<CustomField>
    <fullName>Optimize_IOS__c</fullName>
    <label>Optimize_IOS</label>
    <type>Url</type>
</CustomField>