force-app/main/default/objects/NewDashboardVideoLink__c/fields/Plan_Preview_Link__c.field-meta.xml
<CustomField>
    <fullName>Plan_Preview_Link__c</fullName>
    <label>Plan Preview Link</label>
    <type>Url</type>
</CustomField>