force-app/main/default/objects/NewDashboardVideoLink__c/fields/Privacy__c.field-meta.xml
<CustomField>
    <fullName>Privacy__c</fullName>
    <label>Privacy</label>
    <type>Url</type>
</CustomField>