force-app/main/default/objects/NewDashboardVideoLink__c/fields/Privacy_Pledge_Link__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Pledge_Link__c</fullName>
    <label>Privacy Pledge Link</label>
    <type>Url</type>
</CustomField>