force-app/main/default/objects/NewDashboardVideoLink__c/fields/Prorations__c.field-meta.xml
<CustomField>
    <fullName>Prorations__c</fullName>
    <label>Prorations</label>
    <type>Url</type>
</CustomField>