force-app/main/default/objects/NewDashboardVideoLink__c/fields/Reimbursement_Policy__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_Policy__c</fullName>
    <label>Reimbursement Policy</label>
    <type>Url</type>
</CustomField>