force-app/main/default/objects/NewDashboardVideoLink__c/fields/Reimbursement_Policy_Admin__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_Policy_Admin__c</fullName>
    <label>Reimbursement Policy Admin</label>
    <type>Url</type>
</CustomField>