force-app/main/default/objects/NewDashboardVideoLink__c/fields/Remove_User__c.field-meta.xml
<CustomField>
    <fullName>Remove_User__c</fullName>
    <label>Remove User</label>
    <type>Url</type>
</CustomField>