force-app/main/default/objects/NewDashboardVideoLink__c/fields/Reports__c.field-meta.xml
<CustomField>
    <fullName>Reports__c</fullName>
    <label>Reports</label>
    <type>Url</type>
</CustomField>