force-app/main/default/objects/NewDashboardVideoLink__c/fields/Sync_Data_Android__c.field-meta.xml
<CustomField>
    <fullName>Sync_Data_Android__c</fullName>
    <label>Sync Data Android</label>
    <type>Url</type>
</CustomField>