force-app/main/default/objects/NewDashboardVideoLink__c/fields/Sync_Data_iOS__c.field-meta.xml
<CustomField>
    <fullName>Sync_Data_iOS__c</fullName>
    <label>Sync Data iOS</label>
    <type>Url</type>
</CustomField>