force-app/main/default/objects/NewDashboardVideoLink__c/fields/Troubleshooting_Android__c.field-meta.xml
<CustomField>
    <fullName>Troubleshooting_Android__c</fullName>
    <description>Troubleshooting for driver</description>
    <label>Troubleshooting_Android</label>
    <type>Url</type>
</CustomField>