force-app/main/default/objects/NewDashboardVideoLink__c/fields/Troubleshooting_Android_video__c.field-meta.xml
<CustomField>
    <fullName>Troubleshooting_Android_video__c</fullName>
    <label>Troubleshooting_Android_video</label>
    <type>Url</type>
</CustomField>