force-app/main/default/objects/NewDashboardVideoLink__c/fields/Troubleshooting_IOS__c.field-meta.xml
<CustomField>
    <fullName>Troubleshooting_IOS__c</fullName>
    <label>Troubleshooting_IOS</label>
    <type>Url</type>
</CustomField>