force-app/main/default/objects/NewDashboardVideoLink__c/fields/Troubleshooting_IOS_video__c.field-meta.xml
<CustomField>
    <fullName>Troubleshooting_IOS_video__c</fullName>
    <label>Troubleshooting_IOS_video</label>
    <type>Url</type>
</CustomField>