force-app/main/default/objects/NewDashboardVideoLink__c/fields/Welcome_Link__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Link__c</fullName>
    <label>Welcome Link</label>
    <type>Url</type>
</CustomField>