force-app/main/default/objects/NewDashboardVideoLink__c/fields/Welcome_Link_Admin__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Link_Admin__c</fullName>
    <description>Onboarding welcome link for manager and admin</description>
    <label>Welcome Link Admin</label>
    <type>Url</type>
</CustomField>