force-app/main/default/objects/NewDashboardVideoLink__c/fields/Welcome_Link_Driver__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Link_Driver__c</fullName>
    <description>Onboarding welcome link for driver</description>
    <label>Welcome Link Driver</label>
    <type>Url</type>
</CustomField>